@@ -2,8 +2,10 @@ git-core (1:1.5.3.5-1.1) unstable; urgency=low
 
   * debian/implicit: add proper dependencies to support 'parallel build'
     through make -j (thx Daniel Schepler for the patch).
+  * debian/rules: support 'nocheck' in DEB_BUILD_OPTIONS to skip running
+    the selftests.
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 07 Nov 2007 09:25:47 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 07 Nov 2007 09:35:31 +0000
 
 git-core (1:1.5.3.5-1) unstable; urgency=low
 
